--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,26 +4,27 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
+    
     <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
+        <session-timeout>60</session-timeout>
     </session-config>
     
-    <error-page>
-        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/faces/error_page.xhtml</location>
-    </error-page>
-
+<!--    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>vader</param-value>
+    </context-param>-->
+    
     <welcome-file-list>
         <welcome-file>faces/login_page.xhtml</welcome-file>
     </welcome-file-list>
