--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,6 +26,6 @@
     </context-param>-->
     
     <welcome-file-list>
-        <welcome-file>faces/login_page.xhtml</welcome-file>
+        <welcome-file>faces/rs_login_page.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
